ajustando tamanho colunas

--- a/lista-lidos.html
+++ b/lista-lidos.html
@@ -74,41 +74,41 @@
 
           <div class="lista-livros" style="margin: 5px;">
             <h2>Lidos</h2>
-            <table class="table">
+            <table class="table" style="font-size: large;">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">Nome</th>
+                  <th scope="col" style="width: 20%">Nome</th>
                   <th scope="col">Capa</th>
-                  <th scope="col">Tempo De Leitura</th>
-                  <th scope="col">Páginas</th>
-                  <th scope="col">Avaliação</th>
+                  <th scope="col" style="width: 20%">Tempo De Leitura</th>
+                  <th scope="col" style="width: 15%">Páginas</th>
+                  <th scope="col" style="width: 15%">Avaliação</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <th scope="row">1</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>10 dias</td>
                   <td>400</td>
-                  <td>5 estrelas</td>
+                  <td>5 estrelas <br> <a href="#">Editar</a></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>20 dias</td>
                   <td>500</td>
-                  <td>4 estrelas</td>
+                  <td>4 estrelas <br> <a href="#">Editar</a></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>30 dias</td>
                   <td>500</td>
-                  <td>Sem avaliação</td>
+                  <td>Sem avaliação <br> <a href="#">Editar</a></td>
                 </tr>
               </tbody>
             </table>
