--- a/lista-para-ler.html
+++ b/lista-para-ler.html
@@ -74,27 +74,30 @@
 
           <div class="lista-livros" style="margin: 5px;">
             <h2>Para Ler</h2>
-              <table class="table">
+              <table class="table" style="font-size: large;">
                 <thead class="thead-dark">
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Nome</th>
+                    <th scope="col" style="width: 20%">Nome</th>
                     <th scope="col">Capa</th>
-                    <th scope="col">Páginas</th>
+                    <th scope="col" style="width: 25%">Páginas</th>
+                    <th scope="col" style="width: 25%">Opção</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
                     <td>Livro</td>
-                    <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                    <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                     <td>700</td>
+                    <td><a class="nav-link" href="#">Atualizar Status</a></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
                     <td>Livro</td>
-                    <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                    <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                     <td>650</td>
+                    <td><a class="nav-link" href="#">Atualizar Status</a></td>
                   </tr>
                 </tbody>
             </table>
