--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
           <div>
             <h1>Resumo</h1>
-              <table class="table table-striped table-dark" style="text-align:center;">
+              <table class="table table-striped table-dark" style="text-align:center; font-size: large">
                   <thead>
                     <tr>
                       <th scope="col">Livros Lidos</th>
@@ -98,27 +98,30 @@
 
           <div class="lista-livros" style="margin: 5px;">
             <h2>Lendo Agora</h2>
-            <table class="table">
+            <table class="table" style="font-size: large;">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">Nome</th>
+                  <th scope="col" style="width: 20%">Nome</th>
                   <th scope="col">Capa</th>
-                  <th scope="col">Tempo Lendo até Agora</th>
+                  <th scope="col" style="width: 25%">Tempo Lendo até Agora</th>
+                  <th scope="col" style="width: 25%">Opção</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <th scope="row">1</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>5 dias</td>
+                  <td><a class="nav-link" href="#">Atualizar Status</a></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>30 dias</td>
+                  <td><a class="nav-link" href="#">Atualizar Status</a></td>
                 </tr>
               </tbody>
             </table>
@@ -126,72 +129,75 @@
             <hr style="border: 1px solid grey; margin-top: 20px; margin-bottom: 15px;">
 
             <h2>Lidos</h2>
-            <table class="table">
+            <table class="table" style="font-size: large;">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">Nome</th>
+                  <th scope="col" style="width: 20%">Nome</th>
                   <th scope="col">Capa</th>
-                  <th scope="col">Tempo De Leitura</th>
-                  <th scope="col">Páginas</th>
-                  <th scope="col">Avaliação</th>
+                  <th scope="col" style="width: 20%">Tempo De Leitura</th>
+                  <th scope="col" style="width: 15%">Páginas</th>
+                  <th scope="col" style="width: 15%">Avaliação</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <th scope="row">1</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>10 dias</td>
                   <td>400</td>
-                  <td>5 estrelas</td>
+                  <td>5 estrelas <br> <a href="#">Editar</a></td>
                 </tr>
                 <tr>
                   <th scope="row">2</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>20 dias</td>
                   <td>500</td>
-                  <td>4 estrelas</td>
+                  <td>4 estrelas <br> <a href="#">Editar</a></td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
                   <td>Livro</td>
-                  <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
                   <td>30 dias</td>
                   <td>500</td>
-                  <td>Sem avaliação</td>
+                  <td>Sem avaliação <br> <a href="#">Editar</a></td>
                 </tr>
               </tbody>
             </table>
 
             <hr style="border: 1px solid grey; margin-top: 20px; margin-bottom: 15px;">
             
-              <h2>Para Ler</h2>
-              <table class="table">
-                <thead class="thead-dark">
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Capa</th>
-                    <th scope="col">Páginas</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Livro</td>
-                    <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
-                    <td>700</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Livro</td>
-                    <td><img src="public\imagens\capa.png" alt="logo" height="100px"></td>
-                    <td>650</td>
-                  </tr>
-                </tbody>
-            </table>
+            <h2>Para Ler</h2>
+            <table class="table" style="font-size: large;">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col" style="width: 20%">Nome</th>
+                  <th scope="col">Capa</th>
+                  <th scope="col" style="width: 25%">Páginas</th>
+                  <th scope="col" style="width: 25%">Opção</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Livro</td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
+                  <td>700</td>
+                  <td><a class="nav-link" href="#">Atualizar Status</a></td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Livro</td>
+                  <td><img src="public\imagens\capa.png" alt="logo" height="15%"></td>
+                  <td>650</td>
+                  <td><a class="nav-link" href="#">Atualizar Status</a></td>
+                </tr>
+              </tbody>
+          </table>
           </div>
         </div>
       </div>
