--- a/front-end/perfil.html
+++ b/front-end/perfil.html
@@ -48,7 +48,15 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-5" href="lendo-agora.html" aria-expanded="false">Lendo Agora</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-5" href="lidos.html" aria-expanded="false">Lidos</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-5" href="para-ler.html#top" aria-expanded="false">Para Ler</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-5" href="#" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-user-2 mbr-iconfont mbr-iconfont-btn"></span>Nome</a><div class="dropdown-menu"><a class="dropdown-item text-black text-primary display-5" href="perfil.html" aria-expanded="false">Perfil</a><a class="dropdown-item text-black text-primary display-5" href="avaliacoes.html" aria-expanded="false">Avaliações</a><a class="dropdown-item text-black text-primary display-5" href="#" aria-expanded="false">Configurações</a><a class="dropdown-item text-black text-primary display-5" href="index.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-logout mbr-iconfont mbr-iconfont-btn"></span>Sair</a></div></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-5" href="lendo-agora.html" aria-expanded="false">Lendo Agora</a></li>
+
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-5" href="lidos.html" aria-expanded="false">Lidos</a></li>
+
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-5" href="para-ler.html" aria-expanded="false">Para Ler</a></li>
+
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-5" href="#" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mobi-mbri mobi-mbri-user-2 mbr-iconfont mbr-iconfont-btn"></span>Nome</a><div class="dropdown-menu"><a class="dropdown-item text-black text-primary display-5" href="perfil.html" aria-expanded="false">Perfil</a><a class="dropdown-item text-black text-primary display-5" href="avaliacoes.html" aria-expanded="false">Avaliações</a><a class="dropdown-item text-black text-primary display-5" href="#" aria-expanded="false">Configurações</a><a class="dropdown-item text-black text-primary display-5" href="index.html" aria-expanded="false"><span class="mobi-mbri mobi-mbri-logout mbr-iconfont mbr-iconfont-btn"></span>Sair</a></div></li>
+                </ul>
                 
                 
             </div>
