--- a/front-end/para-ler.html
+++ b/front-end/para-ler.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="pagina-inicial.html>
                         <img src="assets/images/mbr-124x124.png" alt="logo" style="height: 3rem;">
                     </a>
                 </span>
