--- a/front-end/login.html
+++ b/front-end/login.html
@@ -65,8 +65,8 @@
                             <div class="col-lg-12 col-md-12 col-sm-12">
                             </div>
                             <div class="col-lg-12 col-md col-sm-12 form-group">
-                                <input type="text" name="email" placeholder="E-mail"
-                                    data-form-field="email" class="form-control" value="" id="email-form-login">
+                                <input type="text" name="email" placeholder="E-mail" data-form-field="email"
+                                    class="form-control" value="" id="email-form-login">
                             </div>
                             <div class="col-lg-12 col-md col-sm-12 form-group">
                                 <input type="senha" name="senha" placeholder="Senha" data-form-field="senha"
@@ -85,7 +85,7 @@
     </section>
 
     <section class="content11 cid-sfWO3G3V7W" id="content12-1q">
-    
+
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-8 align-center">
@@ -131,7 +131,6 @@
     <script src="assets/formstyler/jquery.formstyler.min.js"></script>
     <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>
     <script src="assets/theme/js/script.js"></script>
-
 
 </body>
 
