--- a/front-end/portal/index.html
+++ b/front-end/portal/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Home - Livros</title>
+  <title>Shelf - Portal</title>
   <meta charset="utf-8">
   <link rel="shortcut icon" href="..\assets\images\logo.png" type="image/x-icon">
   <link rel="stylesheet" href="..\assets\css\bootstrap.min.css">
