--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -71,12 +71,12 @@
                 <h1>Lendo Agora</h1>
                 <br>
                 <div class="row pb-5">
-                    <table class="table" style="font-size: large;">
+                    <table class="table table-striped table-light" style="font-size: large;">
                         <thead class="thead-dark">
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col" style="width: 20%">Nome</th>
                                 <th scope="col">Capa</th>
+                                <th scope="col" style="width: 20%">Nome</th>
                                 <th scope="col" style="width: 25%">Tempo Lendo até Agora</th>
                                 <th scope="col" style="width: 25%">Opção</th>
                             </tr>
@@ -84,15 +84,15 @@
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>Livro</td>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>Livro</td>
                                 <td>5 dias</td>
                                 <td><a class="nav-link" href="#">Atualizar Status</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
-                                <td>Livro</td>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>Livro</td>
                                 <td>30 dias</td>
                                 <td><a class="nav-link" href="#">Atualizar Status</a></td>
                             </tr>
