--- a/front-end/portal/lista-lidos.html
+++ b/front-end/portal/lista-lidos.html
@@ -71,12 +71,12 @@
                 <h1>Lidos</h1>
                 <br>
                 <div class="row pb-5">
-                    <table class="table" style="font-size: large;">
+                    <table class="table table-striped table-light" style="font-size: large;">
                         <thead class="thead-dark">
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col" style="width: 20%">Nome</th>
                                 <th scope="col">Capa</th>
+                                <th scope="col" style="width: 20%">Nome</th>
                                 <th scope="col" style="width: 20%">Tempo De Leitura</th>
                                 <th scope="col" style="width: 15%">Páginas</th>
                                 <th scope="col" style="width: 15%">Avaliação</th>
@@ -85,32 +85,32 @@
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td>Livro</td>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>Livro</td>
                                 <td>10 dias</td>
                                 <td>400</td>
                                 <td>5 estrelas <br> <a href="#">Editar</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
-                                <td>Livro</td>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>Livro</td>
                                 <td>20 dias</td>
                                 <td>500</td>
                                 <td>4 estrelas <br> <a href="#">Editar</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
-                                <td>Livro</td>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>Livro</td>
                                 <td>30 dias</td>
                                 <td>500</td>
                                 <td>Sem avaliação <br> <a href="#">Editar</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
-                                <td>Livro</td>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td>Livro</td>
                                 <td>30 dias</td>
                                 <td>500</td>
                                 <td>Sem avaliação <br> <a href="#">Editar</a></td>
