--- a/front-end/home/index.html
+++ b/front-end/home/index.html
@@ -44,7 +44,7 @@
 
     <main>
 
-        <section class="d-flex py-5" style="background-color: lightgray;">
+        <section class="d-flex py-5 inicio-home">
 
                 <div class="container">
                     <h1 class="display-2">Registre suas leituras</h1>
