--- a/front-end/home/login.html
+++ b/front-end/home/login.html
@@ -44,7 +44,7 @@
                     <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required>
                 </form>
                 <br><br>
-                <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href='../portal/index.html';">
+                <button type="button" class="btn btn-lg btn-dark btn-block" onclick="window.location.href='../portal/index.html';">
                     Entrar
                 </button>
                 <br><br><br>
