--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -68,7 +68,12 @@
     <main>
         <section style="background-color: lightgray;">
             <div class="container text-center py-4">
-                <h1>Lendo Agora</h1>
+                <div class="d-flex justify-content-between">
+                    <h1>Lendo Agora</h1>
+                    <button type="button" class="btn btn-lg btn-dark">
+                        Adicionar Livro
+                    </button>
+                </div>
                 <br>
                 <div class="row pb-5">
                     <table class="table table-striped table-light" style="font-size: large;">
