--- a/front-end/portal/lista-lidos.html
+++ b/front-end/portal/lista-lidos.html
@@ -68,7 +68,12 @@
     <main>
         <section style="background-color: lightgray;">
             <div class="container text-center py-4">
-                <h1>Lidos</h1>
+                <div class="d-flex justify-content-between">
+                    <h1>Lidos</h1>
+                    <button type="button" class="btn btn-lg btn-dark">
+                        Adicionar Livro
+                    </button>
+                </div>
                 <br>
                 <div class="row pb-5">
                     <table class="table table-striped table-light" style="font-size: large;">
@@ -108,11 +113,11 @@
                                 <td>Sem avaliação <br> <a href="#">Editar</a></td>
                             </tr>
                             <tr>
-                                <th scope="row">3</th>
+                                <th scope="row">4</th>
                                 <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
                                 <td>Livro</td>
-                                <td>30 dias</td>
-                                <td>500</td>
+                                <td>60 dias</td>
+                                <td>700</td>
                                 <td>Sem avaliação <br> <a href="#">Editar</a></td>
                             </tr>
                         </tbody>
