--- a/front-end/portal/lista-lendo-agora.html
+++ b/front-end/portal/lista-lendo-agora.html
@@ -53,7 +53,7 @@
                         <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Perfil</a>
+                        <a class="dropdown-item" href="perfil.html">Perfil</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="../home/index.html">Sair</a>
                         </div>
@@ -66,7 +66,7 @@
     </header>
 
     <main>
-        <section style="background-color: lightgray;">
+        <section id="lista-lendo-agora-header">
             <div class="container text-center py-4">
                 <div class="d-flex justify-content-between">
                     <h1>Lendo Agora</h1>
@@ -89,17 +89,17 @@
                         <tbody>
                             <tr>
                                 <th scope="row">1</th>
-                                <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
                                 <td>5 dias</td>
-                                <td><a class="nav-link" href="#">Atualizar Status</a></td>
+                                <td><a class="nav-link" href="javascript:void(0);">Atualizar Status</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
-                                <td><img src="..\assets\images\capa.png" alt="logo" height="15%"></td>
+                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
                                 <td>30 dias</td>
-                                <td><a class="nav-link" href="#">Atualizar Status</a></td>
+                                <td><a class="nav-link" href="javascript:void(0);">Atualizar Status</a></td>
                             </tr>
                         </tbody>
                     </table>
