--- a/front-end/portal/index.html
+++ b/front-end/portal/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
 
-<body>
-
+<body class="body-overflow">
 
     <header id="menu-portal-resumo">
 
@@ -54,7 +53,7 @@
                           <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Perfil</a>
+                          <a class="dropdown-item" href="perfil.html">Perfil</a>
                           <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="../home/index.html">Sair</a>
                         </div>
@@ -67,10 +66,9 @@
     </header>
 
     <main>
-        <section style="background-color: lightgray;">
+        <section id="resumo-header">
             <div class="container text-center py-4">
                 <h1>Resumo</h1>
-                <br>
                 <div class="row">
                     <div class="col-6 py-4"> 
                         <table class="table table-striped table-light mb-5" style="text-align:center; font-size: large">
@@ -122,7 +120,6 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <br><br><br>
                     </div>
                 </div>
             </div>
