--- a/front-end/portal/perfil.html
+++ b/front-end/portal/perfil.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>Lidos - Shelf</title>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="..\assets\images\logo.png" type="image/x-icon">
+  <title>Shelf - Portal</title>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="..\assets\images\logo.png" type="image/x-icon">
   <link rel="stylesheet" href="..\assets\css\bootstrap.min.css">
   <link rel="stylesheet" href="..\assets\css\style.css">
 </head>
@@ -49,13 +49,13 @@
 
                     <div class="nav-item dropdown ml-2">
                         <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false" style="color: black;">
-                        <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
+                          aria-haspopup="true" aria-expanded="false" style="color: black;">
+                          <img id="perfil-header" src="..\assets\images\perfil.png" alt="perfil" height="30px">
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="perfil.html">Perfil</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="../home/index.html">Sair</a>
+                          <a class="dropdown-item" href="perfil.html">Perfil</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="../home/index.html">Sair</a>
                         </div>
                     </div>
                 </div>
@@ -66,14 +66,91 @@
     </header>
 
     <main>
-        <section id="lista-lidos-header">
-            <div class="container text-center py-4">
-                <div class="d-flex justify-content-between">
-                    <h1>Lidos</h1>
-                    <button type="button" class="btn btn-lg btn-dark">
-                        Adicionar Livro
-                    </button>
+        <section id="header-perfil">
+            <div class="container">
+                <div class="d-flex justify-content-center">
+                    <div>
+                        <img id="foto-perfil" src="../assets/images/foto-perfil.png" alt="foto-de-perfil">
+                    </div>
+                    <div id="dados-perfil">
+                        <h5>
+                            <strong>Nome de Exibição</strong>
+                        </h5>
+                        <h6>
+                            <strong>@usuario</strong>
+                        </h6>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a quam quis odio
+                            sodales semper ut eu mi. Quisque id odio laoreet urna commodo porta. Nullam at vulputate velit. Aliquam ut felis gravida, scelerisque enim in, dignissim elit.
+                        </p>
+                        <p>
+                            <a href="#">Editar Perfil</a>
+                        </p>
+                    </div>
                 </div>
+            </div>
+        </section>
+        <section id="resumo-perfil">
+            <div class="container text-center py-4">
+                <h1>Resumo</h1>
+                <div class="row">
+                    <div class="col-6 py-4"> 
+                        <table class="table table-striped table-light mb-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Livros Lidos</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>3</td>
+                            </tbody>
+                        </table>
+                        <table class="table table-striped table-light mt-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Páginas Lidas</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1400</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-6 py-4">
+                        <table class="table table-striped table-light mb-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Tempo de Leitura</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>60 dias</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table class="table table-striped table-light mt-5" style="text-align:center; font-size: large">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Média Tempo de Leitura</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>23 páginas/dia</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="lista-avaliacoes">
+            <div class="container text-center py-4">
+                <h1>Avaliações</h1>
                 <br>
                 <div class="row pb-5">
                     <table class="table table-striped table-light" style="font-size: large;">
@@ -81,10 +158,8 @@
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Capa</th>
-                                <th scope="col" style="width: 20%">Nome</th>
-                                <th scope="col" style="width: 20%">Tempo De Leitura</th>
-                                <th scope="col" style="width: 15%">Páginas</th>
-                                <th scope="col" style="width: 15%">Avaliação</th>
+                                <th scope="col" style="width: 40%">Nome</th>
+                                <th scope="col" style="width: 30%">Avaliação</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -92,32 +167,24 @@
                                 <th scope="row">1</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>10 dias</td>
-                                <td>400</td>
                                 <td>5 estrelas <br> <a href="javascript:void(0);">Editar</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>20 dias</td>
-                                <td>500</td>
                                 <td>4 estrelas <br> <a href="javascript:void(0);">Editar</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>30 dias</td>
-                                <td>500</td>
                                 <td>Sem avaliação <br> <a href="javascript:void(0);">Editar</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">4</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>60 dias</td>
-                                <td>700</td>
                                 <td>Sem avaliação <br> <a href="javascript:void(0);">Editar</a></td>
                             </tr>
                         </tbody>
@@ -134,8 +201,7 @@
         </div>
 
   </footer>
-  
-    <!-- JS -->
+  <!-- JS -->
     <script src="../assets/script/jquery.js"></script>
     <script src="../assets/script/bootstrap.bundle.min.js"></script>
     <script src="../assets/script/script.js"></script>
