add pagina livros

--- a/front-end/portal/livros.html
+++ b/front-end/portal/livros.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Lidos - Shelf</title>
+    <title>Lista de Livros - Shelf</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="..\assets\images\logo.png" type="image/x-icon">
   <link rel="stylesheet" href="..\assets\css\bootstrap.min.css">
@@ -66,14 +66,9 @@
     </header>
 
     <main>
-        <section id="lista-lidos-header">
+        <section id="lista-lendo-agora-header">
             <div class="container text-center py-4">
-                <div class="d-flex justify-content-between">
-                    <h1>Lidos</h1>
-                    <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href='livros.html';">
-                        Adicionar Livro
-                    </button>
-                </div>
+                <h1>Livros</h1>
                 <br>
                 <div class="row pb-5">
                     <table class="table table-striped table-light" style="font-size: large;">
@@ -81,10 +76,12 @@
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Capa</th>
-                                <th scope="col" style="width: 20%">Nome</th>
-                                <th scope="col" style="width: 20%">Tempo De Leitura</th>
-                                <th scope="col" style="width: 15%">Páginas</th>
-                                <th scope="col" style="width: 15%">Avaliação</th>
+                                <th scope="col" style="width: 15%">Nome</th>
+                                <th scope="col" style="width: 15%">Autor</th>
+                                <th scope="col" style="width: 10%">Total de Páginas</th>
+                                <th scope="col" style="width: 10%">Ano de Lançamento</th>
+                                <th scope="col" style="width: 15%">Gênero</th>
+                                <th scope="col" style="width: 20%">Opção</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -92,33 +89,61 @@
                                 <th scope="row">1</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>10 dias</td>
-                                <td>400</td>
-                                <td>5 estrelas <br> <a href="javascript:void(0);">Editar</a></td>
+                                <td>Autor</td>
+                                <td>Páginas</td>
+                                <td>Ano</td>
+                                <td>Gênero</td>
+                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>20 dias</td>
-                                <td>500</td>
-                                <td>4 estrelas <br> <a href="javascript:void(0);">Editar</a></td>
+                                <td>Autor</td>
+                                <td>Páginas</td>
+                                <td>Ano</td>
+                                <td>Gênero</td>
+                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>30 dias</td>
-                                <td>500</td>
-                                <td>Sem avaliação <br> <a href="javascript:void(0);">Editar</a></td>
+                                <td>Autor</td>
+                                <td>Páginas</td>
+                                <td>Ano</td>
+                                <td>Gênero</td>
+                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">4</th>
                                 <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
                                 <td>Livro</td>
-                                <td>60 dias</td>
-                                <td>700</td>
-                                <td>Sem avaliação <br> <a href="javascript:void(0);">Editar</a></td>
+                                <td>Autor</td>
+                                <td>Páginas</td>
+                                <td>Ano</td>
+                                <td>Gênero</td>
+                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">5</th>
+                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
+                                <td>Livro</td>
+                                <td>Autor</td>
+                                <td>Páginas</td>
+                                <td>Ano</td>
+                                <td>Gênero</td>
+                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td><img src="..\assets\images\capa-livro.png" alt="logo" height="25%"></td>
+                                <td>Livro</td>
+                                <td>Autor</td>
+                                <td>Páginas</td>
+                                <td>Ano</td>
+                                <td>Gênero</td>
+                                <td><a class="nav-link" href="javascript:void(0);">Adicionar Livro</a></td>
                             </tr>
                         </tbody>
                     </table>
