--- a/front-end/portal/lista-para-ler.html
+++ b/front-end/portal/lista-para-ler.html
@@ -70,7 +70,7 @@
             <div class="container text-center py-4">
                 <div class="d-flex justify-content-between">
                     <h1>Para Ler</h1>
-                    <button type="button" class="btn btn-lg btn-dark">
+                    <button type="button" class="btn btn-lg btn-dark" onclick="window.location.href='livros.html';">
                         Adicionar Livro
                     </button>
                 </div>
