--- a/front-end/portal/perfil.html
+++ b/front-end/portal/perfil.html
@@ -55,7 +55,7 @@
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                           <a class="dropdown-item" href="perfil.html">Perfil</a>
                           <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="../home/index.html">Sair</a>
+                          <a class="dropdown-item" href="../home/index.html" onclick="sair()">Sair</a>
                         </div>
                     </div>
                 </div>
